--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
       - run: npm run build
         if: ${{ steps.release.outputs.release_created }}
 
-      - run: npx pkg Build/App.js --target latest-win-x64,latest-linux-x64,latest-macos-x64,latest-alpine-x64 -C GZip -o dealerI18n
+      - run: npx pkg Build/App.js --target latest-win-x64,latest-linux-x64,latest-macos-x64,latest-alpine-x64 -C GZip -o bin/dealerI18n
         if: ${{ steps.release.outputs.release_created }}
 
       - name: Upload executable as artifact
@@ -54,4 +54,4 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
         with:
           name: dealerI18n
-          path: ./dealerI18n
+          path: ./bin
