--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@basalt-lab/basalt-logger": "^1.5.1",
     "commander": "^12.0.0"
   }
 }
